# asaot

./: .gitignore  AOTCompiler.cpp  AOTCompiler.h  AOTFunction.cpp  AOTFunction.h  AOTLinker.cpp  AOTLinker.h  CMakeLists.txt  Readme.creole  asaot.sublime-project  getbytecodes.py  my_callfunc.h  test.cpp  test2.cpp
include/: AOTCompiler.h  aot_config.h  my_callfunc.h
source/: AOTCompiler.cpp  AOTFunction.cpp
tests/: common.h  generate.py  run.py  test.cpp  test2.cpp
